# markado

./: .gitignore  .pre-commit-config.yaml  COMMIT_CONVENTIONS.md  PRODUCT_REQUIREMENTS.md  PROJECT_EXPLANATION.md  PROJECT_STRUCTURE.md
backend/: .env.example  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 5615ccc87008_database_initialisation.py  cec445bd269a_add_priority_column_to_task.py
backend/src/: main.py
backend/src/markado/: app.py  db_tests.py  logging_config.json  services.py
backend/src/todo_backend/: __main__.py  app.py  database.py  db_tests.py  dev.db  models.py  services.py  setup_logging.py
backend/src/todo_list.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: test_api.py  test_services.py
